Added file operation commands file for Git

--- a/tech/GIT/1.git-init-config.md
+++ b/tech/GIT/1.git-init-config.md
@@ -1,32 +1,41 @@
-This file will teach how to :
+## This file will teach how to :
 
-1. create a git repository -> 
-2. add the changes to git locally -> 
-3. commit the changes with message -> 
-4. configure the local git configuration(adding user.name & user.email) ->
-5. Adding a remote repository -> 
-6. push the changes to that remote repository
+### 1. create a git repository ->
 
+### 2. add the changes to git locally ->
 
-Step 1 : git init 
+### 3. commit the changes with message ->
+
+### 4. configure the local git configuration(adding user.name & user.email) ->
+
+### 5. Adding a remote repository ->
+
+### 6. push the changes to that remote repository
+
+Step 1 : git init
+
         => This command will initialize the current working directory as a git repository locally and start tracking the repository.
 
-Step 2 : git add <filename> | git add .  
+Step 2 : git add <filename> | git add .
+
         => This command will add the file in staging area so that it is ready to be committed.
 
 Step 3 : Adding a configuration for the repository
-        -> a : git config --local --list  => This command will list all the configuration for particular repository (--global => Will show for all repositories for that currently logged in user)
+
+        -> a : git config --local --list => This command will list all the configuration for particular repository (--global => Will show for all repositories for that currently logged in user)
 
         -> b : git config --local user.name "pursotam" && git config --local user.email "your-email@example.com" => This will set the current user and email for your local repository.
 
 Step 4 : git commit -m "Your message regarding changes"
+
         => This command will commit the changes to the local working repository with given message.
 
 Step 5 : We have to add remote repository so that this changes are pushed to that repository
+
         -> a : git remote add origin <remote:url> => This will link the remote repository to you current repository.
 
         -> b : git config pull.rebase false => This will set the reabse to false and will apply merge strategy.
-        
+
         -> c : git pull origin <branch-name> --allow-unrelated-histories => Before push we have to pull first. The flag allow to merge two branches that doesn't share common/related histories.
 
-        -> d : git push origin <branch-name>  
+        -> d : git push origin <branch-name>
