--- a/tech/GIT/3.merge-branch.md
+++ b/tech/GIT/3.merge-branch.md
@@ -1,35 +1,35 @@
 # `git merge & git branch`
 
-### 1. `git branch`
+> ### 1. `git branch`
+>
+> - This will show all the branches that the locally
 
-- This will show all the branches that the locally
+> ### 2. `git branch --all / git branch -a`
 
-### 2. `git branch --all / git branch -a`
+> - This will show all the branches that locally and at remote location.
 
-- This will show all the branches that locally and at remote location.
+> ### 3. `git branch branch-name`
 
-### 3. `git branch branch-name`
+> - This will create a new branch
 
-- This will create a new branch
+> ### 4. `git checkout branch-name`
 
-### 4. `git checkout branch-name`
+> - This will make this branch as current working branch
 
-- This will make this branch as current working branch
+> ### 5. `git checkout -b branch-name`
 
-### 5. `git checkout -b branch-name`
+> - This will create a new branch and make that branch as current working branch
 
-- This will create a new branch and make that branch as current working branch
+> ### 6. `git branch -d branch-name / git branch -D branch-name`
 
-### 6. `git branch -d branch-name / git branch -D branch-name`
+> - The will delete the branch from local repository & later one will delete the branch forcefully as if it has not been merged then it can't be deleted.
 
-- The will delete the branch from local repository & later one will delete the branch forcefully as if it has not been merged then it can't be deleted.
+> ### 7. `git push origin --delete branch-name`
 
-### 7. `git push origin --delete branch-name`
+> - This will delete the branch from remote repository.
 
-- This will delete the branch from remote repository.
+> ### 8. `git checkout main & git merge feature-branch`
 
-### 8. `git checkout main & git merge feature-branch`
-
-- This will merge the feature branch with main. So on main branch we will have a merge commit. It contains all the code from feature-branch.
-- This will merge the feature branch from local repository not with the remote feature branch. To get the latest from origin we can use either or two below
-- `git pull origin feature-branch` => This will fetch the latest code from feature branch and merge it into current branch(main in our case)
+> - This will merge the feature branch with main. So on main branch we will have a merge commit. It contains all the code from feature-branch.
+> - This will merge the feature branch from local repository not with the remote feature branch. To get the latest from origin we can use either or two below
+> - `git pull origin feature-branch` => This will fetch the latest code from feature branch and merge it into current branch(main in our case)
